; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-lua.c_obs_lua_tick_callback.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-lua.c_obs_lua_tick_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lua_obs_callback = type { %struct.TYPE_2__, i32* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, float)* @obs_lua_tick_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @obs_lua_tick_callback(i8* %0, float %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca float, align 4
  %5 = alloca %struct.lua_obs_callback*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store float %1, float* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.lua_obs_callback*
  store %struct.lua_obs_callback* %8, %struct.lua_obs_callback** %5, align 8
  %9 = load %struct.lua_obs_callback*, %struct.lua_obs_callback** %5, align 8
  %10 = getelementptr inbounds %struct.lua_obs_callback, %struct.lua_obs_callback* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %6, align 8
  %12 = load %struct.lua_obs_callback*, %struct.lua_obs_callback** %5, align 8
  %13 = getelementptr inbounds %struct.lua_obs_callback, %struct.lua_obs_callback* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load %struct.lua_obs_callback*, %struct.lua_obs_callback** %5, align 8
  %19 = call i32 @obs_remove_tick_callback(void (i8*, float)* @obs_lua_tick_callback, %struct.lua_obs_callback* %18)
  br label %28

20:                                               ; preds = %2
  %21 = call i32 (...) @lock_callback()
  %22 = load i32*, i32** %6, align 8
  %23 = load float, float* %4, align 4
  %24 = fptosi float %23 to i32
  %25 = call i32 @lua_pushnumber(i32* %22, i32 %24)
  %26 = call i32 @call_func(void (i8*, float)* @obs_lua_tick_callback, i32 1, i32 0)
  %27 = call i32 (...) @unlock_callback()
  br label %28

28:                                               ; preds = %20, %17
  ret void
}

declare dso_local i32 @obs_remove_tick_callback(void (i8*, float)*, %struct.lua_obs_callback*) #1

declare dso_local i32 @lock_callback(...) #1

declare dso_local i32 @lua_pushnumber(i32*, i32) #1

declare dso_local i32 @call_func(void (i8*, float)*, i32, i32) #1

declare dso_local i32 @unlock_callback(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
